tests/neg/named-tuples-2.check
-- [E030] Match case Unreachable Error: tests/neg/named-tuples-2.scala:4:9 ---------------------------------------------
4 |    case (name, age) => () // error
  |         ^
  |         Unreachable case
  |
  | longer explanation available when compiling with `-explain`
-- [E030] Match case Unreachable Error: tests/neg/named-tuples-2.scala:5:9 ---------------------------------------------
5 |    case (n, a, m, x) => () // error
  |         ^
  |         Unreachable case
  |
  | longer explanation available when compiling with `-explain`
